fix: align translator buttons on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    width: 100%;
 }
 
 html, body {
